Ethereal Cloud/wwwroot/css/Site.css
body {
    font-family: 'Jost', sans-serif;
    background: #f5f6fa;
    overflow: auto;
    margin-bottom: 50px;
}

* {
    list-style: none;
    text-decoration: none;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Open Sans', sans-serif;
}

h2 {
    font-size: 22px;
}

.logo {
    width: auto;
    height: 3rem;
}

/* Navigation bar at top */
header::after {
    content: '';
    display: table;
    clear: both;
}

.navbar-brand {
    height: 100px;
    width: 100px;
    border-radius: 50%;
    background-color: white;
    display: flex;
    align-items: center;
}

    .navbar-brand img {
        max-width: 100%;
        max-height: 100%;
        width: auto;
        height: auto;
        padding: 5px;
    }

.main-nav {
    float: left;
    width: 100%;
}

.nav-pages {
    margin: 0;
    padding: 0;
    list-style: none;
}

.nav-item {
    display: inline-block;
    margin-left: 30px;
    padding-top: 12px;
    position: relative;
}

.nav-link {
    text-decoration: none;
    text-transform: uppercase;
    font-size: 16px;
}

    .nav-link:hover {
        color: whitesmoke;
    }

    .nav-link::before {
        content: '';
        display: block;
        height: 5px;
        background-color: #444;
        position: absolute;
        top: 0;
        width: 0%;
        transition: all ease-in-out 250ms;
    }

    .nav-link:hover::before {
        width: 100%;
    }

/* Footer */
#footer {
    position: fixed;
    height: 50px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    margin-bottom: 0px;
}

/* Error message popups */
.popup-message {
    text-align: center;
    margin-top: 5px;
}

/* Buttons on every page (to keep consistency) */
.btn {
    background: #9877c5;
    border-color: black;
}

    .btn:hover {
        background-color: #705892;
        border-color: black;
    }

.active-link {
    color: white; /* Change text color to white */
}

